# 3DCurves

./: CMakeLists.txt  main.cpp
project/: Curve.cpp  Curve.h
project/Circle/: Circle.cpp  Circle.h
project/Ellipse/: Ellipse.cpp  Ellipse.h
project/Helixe/: Helix.cpp  Helix.h
project/Output/: CurvesMethods.cpp  CurvesMethods.h
